<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="69dp"
        android:visibility="invisible"
        android:text="@string/Proximo"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="226dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="176dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="@string/senha"
        android:textColor="#FFFFFF"
        tools:ignore="LabelFor" />
</RelativeLayout>

